[gd_scene load_steps=4 format=3 uid="uid://taqcgkosj1e6"]

[ext_resource type="PackedScene" uid="uid://co4t4p5pawylr" path="res://scenes/common/prefabs/asset.tscn" id="1_t0req"]
[ext_resource type="Script" path="res://scenes/shop/ask_popup.gd" id="1_ulgkj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yhy67"]
bg_color = Color(0, 0, 0, 1)

[node name="AskPopup" type="ColorRect"]
offset_right = 600.0
offset_bottom = 350.0
color = Color(1, 0.541176, 0, 1)
script = ExtResource("1_ulgkj")

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="V" type="VBoxContainer" parent="M"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="item_name" type="Label" parent="M/V"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "(아이템 이름) 을
구매하시겠습니까?
"

[node name="Asset" parent="M/V" instance=ExtResource("1_t0req")]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="M/V"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 2

[node name="Cancel" type="Button" parent="M/V/H"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_yhy67")
text = "      취소      "

[node name="Buy" type="Button" parent="M/V/H"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_yhy67")
text = "      구매      "

[connection signal="button_down" from="M/V/H/Cancel" to="." method="_on_cancel_button_down"]
[connection signal="button_down" from="M/V/H/Buy" to="." method="_on_buy_button_down"]
